# OOB_voice_agent_opensource

./: README.md  local_voice_chat.py  local_voice_chat_advanced.py  pyproject.toml
